tests/ui/lexer/lex-bad-char-literals-8.rs
fn main() {
    let _ = ' hello // here's a comment
    //~^ ERROR: unterminated character literal
}
